Basic color scheme created

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#fafbfc</color>
+    <color name="colorPrimaryDark">#f6f8fa</color>
+    <color name="colorAccent">#24292e</color>
+    <color name="colorDistinction">#3DC08D</color>
+    <color name="colorError">#FA5A2F</color>
 </resources>
