--- a/app/src/main/res/layout/main_nav_header.xml
+++ b/app/src/main/res/layout/main_nav_header.xml
@@ -1,7 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/colorAccent"
+    android:orientation="horizontal"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
+    <ImageView
+        android:id="@+id/userProfilePicture"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:contentDescription="@string/descr_user_profile_picture"
+        android:padding="5dp"
+        android:src="@drawable/ic_face" />
+
+    <TextView
+        android:id="@+id/userName"
+        style="@style/GithubText.Label"
+        android:layout_width="match_parent"
+        android:clickable="false"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:gravity="center"
+        android:text="@string/log_in"
+        tools:text="Log in" />
 </LinearLayout>
